<resources>
    <string name="app_name">RecycleBuddy</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_label">LOG IN</string>
    <string name="signup_label">SIGN UP</string>
    <string name="search_label">Search</string>
    <string name="articles_label">Articles</string>
    <string name="store_label">Store</string>
    <string name="profile_label">Profile</string>
    <string name="search_hint">Search</string>
    <string name="store_explanation">Store</string>
    <string name="recycle_label">Recycling</string>
    <string name="compost_label">Composting</string>
    <string name="trash_label">Trash</string>
    <string name="forgotpassword_label">Forgot password?</string>

    <string name="do_recycle_bulleted_list">
        <li>Rigid plastics/bottles </li>\n
        <li>Paper and cardboard (cereal/snack cardboard boxes, phonebooks, magazines, mail, office paper, newspaper)</li>\n
        <li>Metals (tin, aluminum, and steel cans)</li>\n
        <li>Glass (soft drink and beer bottles, wine and liquor bottles, food containers or jars)</li>
    </string>

    <string name="dont_recycle_bulleted_list">
        <li>Loose plastic bags (plastic shopping bags and stretch wrap)</li>\n
        <li>Foam cups and containers (egg cartons, take out containers, and drinking cups)</li>\n
        <li>Soiled food items (food soiled containers and soiled paper products)</li>\n
        <li>Other (broken/sharp glass, fast food packaging, and plastic utensils)</li>
    </string>

    <string name="do_compost_bulleted_list">
        <li>Fruits and vegetables</li>\n
        <li>Bread, egg shells, and nut shells</li>\n
        <li>Coffee grinds, coffee filters, and tea bags</li>\n
        <li>Leaves, flowers, and tree trimmings</li>\n
        <li>Paper without colored ink</li>
    </string>

    <string name="dont_compost_bulleted_list">
        <li>Meat, fish or dairy</li>\n
        <li>Fats, grease or oil</li>\n
        <li>Cat or dog poop</li>\n
        <li>Pesticide-treated, diseased or poisonous plants</li>\n
        <li>Plastic, metal or glass</li>
    </string>

    <string name="do_trash_bulleted_list">
        <li>Unsanitary items (tissues, diapers, etc.)</li>\n
        <li>Chip bags and similar wrappings</li>\n
        <li>Containers that are gunky or greasy with food residue</li>
    </string>

    <string name="dont_trash_bulleted_list">
        <li>Fruits and vegetables</li>\n
        <li>Bread, egg shells, and nut shells</li>\n
        <li>Coffee grinds, coffee filters, and tea bags</li>\n
        <li>Leaves, flowers, and tree trimmings</li>\n
        <li>Paper without colored ink</li>\n
        <li>Rigid plastics/bottles</li>\n
        <li>Paper and cardboard (cereal/snack cardboard boxes, phonebooks, magazines, mail, office paper, newspaper)</li>\n
        <li>Metals (tin, aluminum, and steel cans)</li>\n
        <li>Glass (soft drink and beer bottles, wine and liquor bottles, food containers or jars)</li>\n
    </string>
</resources>
