<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoID"
        android:layout_centerHorizontal="true"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src= "@drawable/reducereuserecycle"
        />

    <EditText
        android:id="@+id/emailID"
        android:hint="@string/email_label"
        style="@style/LabelStyle"
        android:layout_below="@+id/logoID"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:textSize="28sp"
        android:inputType="textEmailAddress"
        android:ems="8"
        />

    <EditText
        android:id="@+id/passwordID"
        android:hint="@string/password_label"
        style="@style/LabelStyle"
        android:layout_below="@+id/emailID"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:textSize="28sp"
        android:inputType="textPassword"
        android:ems="8"
        />


    <Button
        android:id="@+id/loginID"
        style="@style/LabelStyle"
        android:background="@color/darkGrey"
        android:layout_below="@+id/passwordID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="28sp"
        android:textColor="@android:color/white"
        android:text="@string/login_label"
        />

    <Button
        android:id="@+id/signupID"
        style="@style/LabelStyle"
        android:background="@color/darkGrey"
        android:layout_below="@+id/loginID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:textColor="@android:color/white"
        android:text="@string/signup_label"
        />


</RelativeLayout>
