<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipsActivity">


    <Button
        android:id="@+id/recycle"
        style="@style/LabelStyle"
        android:layout_width="250dp"
        android:layout_marginTop="100dp"
        android:background="@color/darkGrey"
        android:text="@string/recycle_label"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:onClick="goRecycling" />

    <Button
        android:id="@+id/compost"
        style="@style/LabelStyle"
        android:layout_width="250dp"
        android:layout_below="@+id/recycle"
        android:layout_marginTop="100dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/darkGrey"
        android:text="@string/compost_label"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:onClick="goComposting" />

    <Button
        android:id="@+id/trash"
        style="@style/LabelStyle"
        android:layout_width="250dp"
        android:layout_below="@+id/compost"
        android:layout_marginTop="100dp"
        android:background="@color/darkGrey"
        android:text="@string/trash_label"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:onClick="goTrash" />

    <ImageButton
        android:id="@+id/search"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="256dp"
        android:layout_marginBottom="0dp"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/search"
        android:onClick="goSearch"/>

    <ImageButton
        android:id="@+id/articles"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="256dp"
        android:layout_marginBottom="0dp"
        android:layout_toRightOf="@+id/search"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/lightbulb"
        android:onClick="goNews"/>

    <ImageButton
        android:id="@+id/store"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="256dp"
        android:layout_marginBottom="0dp"
        android:layout_toRightOf="@+id/articles"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/store"
        android:onClick="goStore"/>

    <ImageButton
        android:id="@+id/profile"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="256dp"
        android:layout_marginBottom="0dp"
        android:layout_toRightOf="@+id/store"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/profile"
        android:onClick="goProfile"/>

</RelativeLayout>